--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,6 @@
+@import "codemirror/lib/codemirror.css";
+@import "codemirror/theme/material.css";
+
 .App {
   font-family: Untitled Sans, sans-serif;
   line-height: 1.4;
